--- a/12-Adaboost/Projects/Projects/Adaboost Regression Implementation.ipynb
+++ b/12-Adaboost/Projects/Projects/Adaboost Regression Implementation.ipynb
@@ -1614,7 +1614,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -1628,7 +1628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
