--- a/14-XgBoost/Project/Xgboosst Regressor/Xgboost Regression Implementation.ipynb
+++ b/14-XgBoost/Project/Xgboosst Regressor/Xgboost Regression Implementation.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,16 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"./data/cardekho_imputated.csv\", index_col=[0])"
+    "df = pd.read_csv(r\"./cardekho_imputated.csv\", index_col=[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "4         570000  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "4    22.77    1498      98.59      5         570000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "       'Gurkha'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
        "4    22.77    1498      98.59      5  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
        "120"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,27 +646,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "i20            906\n",
-       "Swift Dzire    890\n",
-       "Swift          781\n",
-       "Alto           778\n",
-       "City           757\n",
-       "              ... \n",
-       "Ghibli           1\n",
-       "C                1\n",
-       "Ghost            1\n",
-       "GTC4Lusso        1\n",
-       "Aura             1\n",
-       "Name: model, Length: 120, dtype: int64"
+       "model\n",
+       "i20             906\n",
+       "Swift Dzire     890\n",
+       "Swift           781\n",
+       "Alto            778\n",
+       "City            757\n",
+       "               ... \n",
+       "Altroz            1\n",
+       "C                 1\n",
+       "Ghost             1\n",
+       "Quattroporte      1\n",
+       "Gurkha            1\n",
+       "Name: count, Length: 120, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +811,7 @@
        "4    22.77    1498      98.59      5  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +831,7 @@
        "(3, 5, 2)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1140,7 @@
        "[15411 rows x 14 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1160,7 @@
        "((12328, 14), (3083, 14))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1197,10 +1198,10 @@
        "       [ 0.        ,  0.        ,  0.        , ..., -0.55471774,\n",
        "        -0.43582879, -0.40302241],\n",
        "       [ 1.        ,  0.        ,  0.        , ..., -0.04616815,\n",
-       "         0.06194201, -0.40302241]])"
+       "         0.06194201, -0.40302241]], shape=(12328, 14))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1297,14 +1298,14 @@
       "\n",
       "K-Neighbors Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 325886.8736\n",
-      "- Mean Absolute Error: 91467.6671\n",
+      "- Root Mean Squared Error: 325873.0088\n",
+      "- Mean Absolute Error: 91425.4705\n",
       "- R2 Score: 0.8691\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 253118.4156\n",
-      "- Mean Absolute Error: 112704.3545\n",
-      "- R2 Score: 0.9149\n",
+      "- Root Mean Squared Error: 253024.3951\n",
+      "- Mean Absolute Error: 112526.3461\n",
+      "- R2 Score: 0.9150\n",
       "===================================\n",
       "\n",
       "\n",
@@ -1315,35 +1316,35 @@
       "- R2 Score: 0.9995\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 309397.7832\n",
-      "- Mean Absolute Error: 126510.2903\n",
-      "- R2 Score: 0.8728\n",
+      "- Root Mean Squared Error: 300161.1569\n",
+      "- Mean Absolute Error: 124384.8713\n",
+      "- R2 Score: 0.8803\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 142919.3865\n",
-      "- Mean Absolute Error: 40255.4707\n",
-      "- R2 Score: 0.9748\n",
+      "- Root Mean Squared Error: 134996.7027\n",
+      "- Mean Absolute Error: 40057.4049\n",
+      "- R2 Score: 0.9775\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 228899.9542\n",
-      "- Mean Absolute Error: 102234.1346\n",
+      "- Root Mean Squared Error: 228881.7390\n",
+      "- Mean Absolute Error: 102031.1710\n",
       "- R2 Score: 0.9304\n",
       "===================================\n",
       "\n",
       "\n",
       "Adaboost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 505666.5800\n",
-      "- Mean Absolute Error: 389629.1636\n",
-      "- R2 Score: 0.6847\n",
+      "- Root Mean Squared Error: 393287.0340\n",
+      "- Mean Absolute Error: 263036.5213\n",
+      "- R2 Score: 0.8093\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 566346.2751\n",
-      "- Mean Absolute Error: 412179.9263\n",
-      "- R2 Score: 0.5739\n",
+      "- Root Mean Squared Error: 431004.6033\n",
+      "- Mean Absolute Error: 280484.7644\n",
+      "- R2 Score: 0.7532\n",
       "===================================\n",
       "\n",
       "\n",
@@ -1362,14 +1363,14 @@
       "\n",
       "Xgboost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 91763.6597\n",
-      "- Mean Absolute Error: 64153.8829\n",
-      "- R2 Score: 0.9896\n",
+      "- Root Mean Squared Error: 85441.7947\n",
+      "- Mean Absolute Error: 61009.3203\n",
+      "- R2 Score: 0.9910\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 216809.0791\n",
-      "- Mean Absolute Error: 97224.4932\n",
-      "- R2 Score: 0.9376\n",
+      "- Root Mean Squared Error: 246853.8159\n",
+      "- Mean Absolute Error: 99048.5078\n",
+      "- R2 Score: 0.9191\n",
       "===================================\n",
       "\n",
       "\n"
@@ -1425,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1444,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,47 +1459,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 32 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  98 tasks      | elapsed:   20.4s\n",
-      "[Parallel(n_jobs=-1)]: Done 300 out of 300 | elapsed:   57.3s finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 32 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  98 tasks      | elapsed:   16.7s\n",
-      "[Parallel(n_jobs=-1)]: Done 300 out of 300 | elapsed:   41.0s finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n",
+      "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n",
       "---------------- Best Params for RF -------------------\n",
-      "{'n_estimators': 200, 'min_samples_split': 2, 'max_features': 5, 'max_depth': None}\n",
+      "{'n_estimators': 100, 'min_samples_split': 2, 'max_features': 5, 'max_depth': 15}\n",
       "---------------- Best Params for XGboost -------------------\n",
       "{'n_estimators': 300, 'max_depth': 5, 'learning_rate': 0.1, 'colsample_bytree': 0.5}\n"
      ]
@@ -1526,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1535,27 +1506,27 @@
      "text": [
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 123513.3696\n",
-      "- Mean Absolute Error: 39111.4716\n",
-      "- R2 Score: 0.9812\n",
+      "- Root Mean Squared Error: 126315.5426\n",
+      "- Mean Absolute Error: 39175.1616\n",
+      "- R2 Score: 0.9803\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 211535.2333\n",
-      "- Mean Absolute Error: 98281.6524\n",
-      "- R2 Score: 0.9406\n",
+      "- Root Mean Squared Error: 204408.0828\n",
+      "- Mean Absolute Error: 97289.9875\n",
+      "- R2 Score: 0.9445\n",
       "===================================\n",
       "\n",
       "\n",
       "Xgboost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 115252.4415\n",
-      "- Mean Absolute Error: 75276.8593\n",
-      "- R2 Score: 0.9836\n",
+      "- Root Mean Squared Error: 113500.4364\n",
+      "- Mean Absolute Error: 74046.0703\n",
+      "- R2 Score: 0.9841\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 191852.0847\n",
-      "- Mean Absolute Error: 96118.8154\n",
-      "- R2 Score: 0.9511\n",
+      "- Root Mean Squared Error: 330411.0813\n",
+      "- Mean Absolute Error: 103493.6172\n",
+      "- R2 Score: 0.8550\n",
       "===================================\n",
       "\n",
       "\n"
@@ -1611,7 +1582,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -1625,7 +1596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
