--- a/26-CompleteNLP For Machine Learning/Practicals/4-Tokenization Example Using NLTK.ipynb
+++ b/26-CompleteNLP For Machine Learning/Practicals/4-Tokenization Example Using NLTK.ipynb
@@ -9,42 +9,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting nltk\n",
-      "  Downloading nltk-3.7-py3-none-any.whl (1.5 MB)\n",
-      "     ---------------------------------------- 1.5/1.5 MB 10.5 MB/s eta 0:00:00\n",
-      "Collecting regex>=2021.8.3\n",
-      "  Downloading regex-2022.9.13-cp38-cp38-win_amd64.whl (267 kB)\n",
-      "     ------------------------------------- 267.7/267.7 kB 16.1 MB/s eta 0:00:00\n",
-      "Requirement already satisfied: tqdm in c:\\users\\win10\\anaconda3\\envs\\development\\lib\\site-packages (from nltk) (4.62.3)\n",
-      "Requirement already satisfied: click in c:\\users\\win10\\anaconda3\\envs\\development\\lib\\site-packages (from nltk) (8.0.3)\n",
-      "Requirement already satisfied: joblib in c:\\users\\win10\\anaconda3\\envs\\development\\lib\\site-packages (from nltk) (1.1.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\win10\\anaconda3\\envs\\development\\lib\\site-packages (from click->nltk) (0.4.4)\n",
-      "Installing collected packages: regex, nltk\n",
-      "Successfully installed nltk-3.7 regex-2022.9.13\n",
-      "\n",
-      "[notice] A new release of pip available: 22.1.2 -> 22.3\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+      "Requirement already satisfied: nltk in c:\\users\\adwai\\anaconda3\\envs\\venv\\lib\\site-packages (3.9.1)\n",
+      "Requirement already satisfied: click in c:\\users\\adwai\\anaconda3\\envs\\venv\\lib\\site-packages (from nltk) (8.1.8)\n",
+      "Requirement already satisfied: joblib in c:\\users\\adwai\\anaconda3\\envs\\venv\\lib\\site-packages (from nltk) (1.4.2)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\adwai\\anaconda3\\envs\\venv\\lib\\site-packages (from nltk) (2024.11.6)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\adwai\\anaconda3\\envs\\venv\\lib\\site-packages (from nltk) (4.67.1)\n",
+      "Requirement already satisfied: colorama in c:\\users\\adwai\\anaconda3\\envs\\venv\\lib\\site-packages (from click->nltk) (0.4.6)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "!pip install nltk"
+    "%pip install nltk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\adwai\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt_tab to\n",
+      "[nltk_data]     C:\\Users\\adwai\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers\\punkt_tab.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('punkt_tab')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "corpus=\"\"\"Hello Welcome,to Krish Naik's NLP Tutorials.\n",
     "Please do watch the entire course! to become expert in NLP.\n",
+    "Isha is a good girl.\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -53,6 +80,7 @@
      "text": [
       "Hello Welcome,to Krish Naik's NLP Tutorials.\n",
       "Please do watch the entire course! to become expert in NLP.\n",
+      "Isha is a good girl.\n",
       "\n"
      ]
     }
@@ -63,18 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "##  Tokenization\n",
-    "## Sentence-->paragraphs\n",
+    "## Paragraphs -> Sentences -> Words\n",
     "from nltk.tokenize import sent_tokenize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +120,7 @@
        "list"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +131,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Hello Welcome,to Krish Naik's NLP Tutorials.\",\n",
+       " 'Please do watch the entire course!',\n",
+       " 'to become expert in NLP.',\n",
+       " 'Isha is a good girl.']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +163,8 @@
      "text": [
       "Hello Welcome,to Krish Naik's NLP Tutorials.\n",
       "Please do watch the entire course!\n",
-      "to become expert in NLP.\n"
+      "to become expert in NLP.\n",
+      "Isha is a good girl.\n"
      ]
     }
    ],
@@ -123,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -163,10 +215,16 @@
        " 'expert',\n",
        " 'in',\n",
        " 'NLP',\n",
+       " '.',\n",
+       " 'Isha',\n",
+       " 'is',\n",
+       " 'a',\n",
+       " 'good',\n",
+       " 'girl',\n",
        " '.']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +296,7 @@
        " '.']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,11 +307,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Hello Welcome,to Krish Naik's NLP Tutorials.\\nPlease do watch the entire course! to become expert in NLP.\\nIsha is a good girl.\\n\""
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from nltk.tokenize import TreebankWordTokenizer"
+    "corpus"
    ]
   },
   {
@@ -262,12 +331,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer=TreebankWordTokenizer()"
+    "from nltk.tokenize import TreebankWordTokenizer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer=TreebankWordTokenizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -293,11 +371,16 @@
        " 'become',\n",
        " 'expert',\n",
        " 'in',\n",
-       " 'NLP',\n",
+       " 'NLP.',\n",
+       " 'Isha',\n",
+       " 'is',\n",
+       " 'a',\n",
+       " 'good',\n",
+       " 'girl',\n",
        " '.']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,32 +388,11 @@
    "source": [
     "tokenizer.tokenize(corpus)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -344,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
